...
            "value" : "Concert"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ライブコンサート"
          }
        }
      }
    },
    "CONCERT_VIEW_TWITTER_LINK" : {
      "localizations" : {
...
    "CURRENTLY_LIVE_WIDGET_DISPLAY_NAME" : {
      "comment" : "Widget system text",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Live"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ライブ配信"
...
            "value" : "Live"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "配信中"
          }
        }
      }
    },
    "LIVE_VIEW_TOOLBAR_FAVOURITES_ONLY" : {
      "extractionState" : "manual",
...
    "PAST_VIEW_TITLE" : {
      "comment" : "PastView",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Past"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "アーカイブ"
          }
        }
      }
    },
    "PAST_VIEW_TOOLBAR_SORT_BY_END_TIME" : {
      "localizations" : {
...
    },
    "ROOT_VIEW_CONCERTS" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Concerts"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ライブコンサート"
...
    },
    "ROOT_VIEW_SETTINGS" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "設定"
          }
        }
      }
    },
    "ROOT_VIEW_UPCOMING" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Upcoming"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "今後の配信"
          }
        }
      }
    },
    "sayaka#4163" : {

...
