/* 
  Localizable.strings
  holo-wtf
  
*/
// Root View

"ROOT_VIEW_LIVE" = "Live";
"ROOT_VIEW_UPCOMING" = "Upcoming";
"ROOT_VIEW_PAST" = "Past";
"ROOT_VIEW_SETTINGS" = "Settings";
"ROOT_VIEW_FAVOURITES" = "My Favorites";
"ROOT_VIEW_CONCERTS" = "Concerts";

// Settings

"SETTINGS_TITLE" = "Settings"; 

"SETTINGS_UPCOMING_SCHEDULE_SECTION_HEADER" = "Upcoming Schedule";
"SETTINGS_UPCOMING_SCHEDULE_HOURS_TEXT" = "Upcoming streams lookahead";
"WATCH_SETTINGS_UPCOMING_SCHEDULE_PICKER_TEXT %lld" = "%lld hours";

"SETTINGS_PAST_VIDEOS_SECTION_HEADER" = "Past Streams";
"SETTINGS_PAST_LIMIT" = "Number of past streams to show";

"SETTINGS_STREAM_TIME_HEADER" = "Stream Time";
"SETTINGS_STREAM_TIME_FOOTER" = "If your device is set to a timezone that observes Daylight Saving Time, HoloCal will remind you about DST transitions.";
"SETTINGS_DST_CHANGE_TEXT" = "DST change reminder";
"SETTINGS_DST_CHANGE_PICKER_TEXT %lld" = "%lld days before";

"SETTINGS_CHANNEL_MANAGEMENT_HEADER" = "Channels";
"SETTINGS_MANAGE_FAVOURITE" = "Manage Channel Favorites";
"SETTINGS_MANAGE_FAVOURITE_FAVOURITE_SECTION" = "Favorites";
"SETTINGS_MANAGE_FAVOURITE_VIEW_TITLE" = "Manage Favorites";
"SETTINGS_MANAGE_FAVOURITE_RESET" = "Reset Favorites";

"SETTINGS_MANAGE_FAVOURITE_RESET_ALERT_TEXT" = "Favorites will be reset, are you sure?";
"SETTINGS_MANAGE_FAVOURITE_RESET_ALERT_CANCEL" = "Cancel";
"SETTINGS_MANAGE_FAVOURITE_RESET_ALERT_RESET" = "Reset";

"SETTINGS_MANAGE_GENERATION_VISIBILITY" = "Manage Generation Visibility";
"SETTINGS_MANAGE_GENERATION_VISIBILITY_VIEW_TITLE" = "Generation Visibility";
"SETTINGS_MANAGE_GENERATION_VISIBILITY_SECTION_FOOTER" = "You can deselect generations to exclude them from appearing in Live and Upcoming. \nIf you favourited a talent whose generation is excluded, they will still be shown. ";

"SETTINGS_MANAGE_GENERATION_ORDER" = "Manage Generation Order";
"SETTINGS_MANAGE_GENERATION_ORDER_VIEW_TITLE" = "Generation Order";
"SETTINGS_MANAGE_GENERATION_ORDER_SECTION_FOOTER" = "You can reorder the generations to alter the order they would be shown in both Live and Upcoming. ";

"SETTINGS_MANAGE_GENERATION_VISIBILITY_RESET" = "Reset visibility";
"SETTINGS_MANAGE_GENERATION_VISIBILITY_RESET_ALERT_TEXT" = "Generation visibility will be reset, are you sure?";

"SETTINGS_MANAGE_GENERATION_ORDER_RESET" = "Reset order";
"SETTINGS_MANAGE_GENERATION_ORDER_RESET_ALERT_TEXT" = "Generation order will be reset, are you sure?";

"SETTINGS_MANAGE_GENERATION_RESET_ALERT_CANCEL" = "Cancel";
"SETTINGS_MANAGE_GENERATION_RESET_ALERT_RESET" = "Reset";

"SETTINGS_ABOUT_SECTION_HEADER" = "About";
"SETTINGS_ABOUT_BUG_REPORT" = "Feedback & Bug report";
"SETTINGS_OPEN_SOURCE" = "Open Source";
"SETTINGS_BETA_TESTING" = "Participate in Beta testing";
"SETTINGS_SPECIAL_THANKS" = "Special Thanks";
"SETTINGS_HELP_TRANSLATE" = "Help translate this app";
"SETTINGS_EMAIL_SUPPORT" = "Email Support";
"SETTINGS_SUPPORT_PAGE" = "Support Page";
"SETTINGS_DISCORD_SERVER" = "Join Discord server";

"SETTINGS_NOTIFICATION" = "Notification";
"SETTINGS_MANAGE_NOTIFICATION" = "Manage Notifications";

"SETTINGS_NOTIFICATION_NO_NOTIFICATION_SCHEDULED" = "No notification scheduled";
"SETTINGS_NOTIFICATION_CANCEL_NOTIFICATION" = "Cancel notification";
"SETTINGS_NOTIFICATION_CANCEL_ALL_NOTIFICATIONS" = "Cancel all notifications";
"SETTINGS_NOTIFICATION_WILL_BE_DELIVERED_AT %@" = "Will be delivered at %@";

"SETTINGS_SEARCH_SUGGESTION_LANGUAGE" = "Search Suggestion Language";
"SETTINGS_SEARCHING_HEADER" = "Searching";

// OpenSourceView

"OPEN_SOURCE_VIEW_TITLE" = "Open Source";

// Live Cell View

"LIVE_CELL_VIEW_MEMBER_ONLY_STREAM" = "Member-only stream";
"LIVE_CELL_VIEW_PEOPLE_WATCHING %lld" = "%lld watching";
"LIVE_CELL_VIEW_STARTED_AGO %@" = "Started %@";
"LIVE_CELL_VIEW_WAITING" = "Waiting...";
"LIVE_CELL_VIEW_STARTED_AT %@" = "%@";

// Upcoming Cell View

"UPCOMING_CELL_VIEW_STARTING_IN %@" = "Starting %@";
"UPCOMING_CELL_VIEW_STARTING_IN_SHORT %@" = "In %@";
"UPCOMING_CELL_VIEW_STARTING_TIME_UNKNOWN" = "No starting time";
"UPCOMING_CELL_VIEW_STARTING_AT %@" = "Starting at %@";

// Past Cell View

"PAST_CELL_VIEW_ENDED_AT %@" = "Ended at %@";
"PAST_CELL_VIEW_ENDED %@" = "Ended %@";

// Block Live Time View

"BLOCK_LIVE_TIME_VIEW_TIME_STARTED" = "Time Started";
"BLOCK_LIVE_TIME_VIEW_WAITING" = "Waiting...";

// Block Upcoming Time View

"BLOCK_UPCOMING_TIME_VIEW_STARTING_TIME" = "Starting Time";
"BLOCK_UPCOMING_TIME_VIEW_STARTING_TIME_UNKNOWN" = "N/A";

// Viewer Counter View

"VIEWER_COUNTER_VIEW_WATCHING" = "watching";
"VIEWER_COUNTER_VIEW_MEMBER_ONLY" = "member-only";
"VIEWER_COUNTER_VIEW_MEMBER_NA" = "N/A";

// Block Member Only View

"BLOCK_MEMBER_ONLY_MEMBER" = "Member";
"BLOCK_MEMBER_ONLY_MEMBERSHIP" = "Membership";

// Block Video Type View

"BLOCK_VIDEO_TYPE_PREMIERE" = "Premiere";
"BLOCK_VIDEO_TYPE_VIDEO" = "Video";

// Block Past Time View

"BLOCK_PAST_TIME_VIEW_TIME_ENDED" = "Time Ended";

// Common between LiveView and UpcomingView

"FAILED_TO_RETRIEVE_NEW_DATA" = "Failed to retrieve new data";

// LiveView

"LIVE_VIEW_TITLE" = "Live";
"LIVE_VIEW_CURRENT_COUNT %lld" = "%lld Currently Live";
"LIVE_VIEW_CURRENT_COUNT %lld %lld" = "%lld Currently Live (%lld excluded)";
"LIVE_VIEW_FAVOURITE_SECTION_TITLE" = "Favourited";

// UpcomingView

"UPCOMING_VIEW_TITLE" = "Upcoming";
"UPCOMING_VIEW_STREAM_COUNT_IN_HOURS %lld %lld" = "%lld Upcoming Streams in %lld hours";
"UPCOMING_VIEW_STREAM_COUNT_IN_HOURS %lld %lld %lld" = "%lld Upcoming Streams in %lld hours (%lld excluded)";

// PastView

"PAST_VIEW_TITLE" = "Past";
"PAST_VIEW_CURRENT_COUNT %lld" = "%lld Archived";
"PAST_VIEW_CURRENT_COUNT %lld %lld" = "%lld Archived (%lld excluded)";

// ConcertsView
"UPCOMING_CONCERTS_COUNT %lld" = "%lld Upcoming Concerts";

// ConcertView
"CONCERT_VIEW_TITLE" = "Concert";
"CONCERT_VIEW_TWITTER_LINK" = "Twitter Link";
"CONCERT_VIEW_YOUTUBE_LINK" = "YouTube Link";
"CONCERT_VIEW_PURCHASE_TICKETS" = "Purchase Tickets";
"CONCERT_VIEW_OFFICIAL_LINK" = "Official Site";
"CONCERT_VIEW_DISCLAIMER" = "We regret that concert data may be incorrect or incomplete. We are continuing to improve our data.";

// BlockJPYPriceView
"BLOCK_JPY_PRICE_TICKET_PRICE" = "Ticket Price";

// JpyPrice
"JPY_PRICE_TBD" = "TBD";
"JPY_PRICE_FREE" = "Free";

// Platform
"BLOCK_PLATFORM_VIEW_PLATFORM" = "Platform";

"PLATFORM_NICONICO" = "Niconico";
"PLATFORM_SPWN" = "SPWN";
"PLATFORM_TBA" = "TBA";
"PLATFORM_YOUTUBE" = "YouTube";
"PLATFORM_ZAN" = "Za-N";
"PLATFORM_ZAIKO" = "Zaiko";
"PLATFORM_OTHER" = "Other";

// LiveFormat
"BLOCK_FORMAT_VIEW_FORMAT" = "Format";

"LIVE_FORMAT_ONLINE" = "Online";
"LIVE_FORMAT_IRL" = "On-site";
"LIVE_FORMAT_BOTH" = "On-site + Online";

// LiveViewToolbar & UpcomingViewToolbar & PastViewToolbar

"LIVE_VIEW_TOOLBAR_SHOW_ABSOLUTE" = "Show absolute time";
"LIVE_VIEW_TOOLBAR_SHOW_COMPACT" = "Show Express Mode";
"LIVE_VIEW_TOOLBAR_SHOW_CARD" = "Show card view";
"LIVE_VIEW_TOOLBAR_SORT" = "Sort...";
"LIVE_VIEW_TOOLBAR_SORT_BY_GENERATION" = "Sort by generation";
"LIVE_VIEW_TOOLBAR_SORT_BY_GENERATION_IPAD" = "Default sort";
"LIVE_VIEW_TOOLBAR_SORT_BY_START_TIME" = "Sort by start time...";
"LIVE_VIEW_TOOLBAR_SORT_BY_VIEWERS" = "Sort by viewers...";
"LIVE_VIEW_TOOLBAR_SORT_BY_VIEWERS_ASCENDING" = "Least watched first";
"LIVE_VIEW_TOOLBAR_SORT_BY_VIEWERS_DESCENDING" = "Most watched first";
"LIVE_VIEW_TOOLBAR_SORT_BY_START_TIME_NEAREST_TO_FURTHEST" = "Recently started first";
"LIVE_VIEW_TOOLBAR_SORT_BY_START_TIME_FURTHEST_TO_NEAREST" = "Oldest stream first";
"UPCOMING_VIEW_TOOLBAR_SORT_BY_START_TIME_NEAREST_TO_FURTHEST" = "Nearest upcoming first";
"UPCOMING_VIEW_TOOLBAR_SORT_BY_START_TIME_FURTHEST_TO_NEAREST" = "Furthest upcoming first";
"PAST_VIEW_TOOLBAR_SORT_BY_ENDED_TIME_NEAREST_TO_FURTHEST" = "Ended most recent first";
"PAST_VIEW_TOOLBAR_SORT_BY_ENDED_TIME_FURTHEST_TO_NEAREST" = "Ended most recent last";
"PAST_VIEW_TOOLBAR_SORT_BY_END_TIME" = "Sort by end time...";

// VideoContextMenu
"VIDEO_CONTEXT_MENU_TWITTER_PROFILE" = "Open Twitter profile";
"VIDEO_CONTEXT_MENU_YOUTUBE_CHANNEL" = "Open YouTube channel";
"VIDEO_CONTEXT_MENU_FAVOURITE_CHANNEL" = "Add channel to favourite";
"VIDEO_CONTEXT_MENU_REMOVE_FAVOURITE" = "Remove favourite";
"VIDEO_CONTEXT_MENU_SHARE" = "Share";
"VIDEO_CONTEXT_MENU_ADD_TO_CALENDAR" = "Add to calendar";

// Swipe actions for LinkedVideo
"LINKED_VIDEO_SWIPE_ACTIONS_FAVOURITE" = "Favourite";
"LINKED_VIDEO_SWIPE_ACTIONS_UNFAVOURITE" = "Unfavourite";
"LINKED_VIDEO_SWIPE_ACTIONS_SHARE" = "Share";

// Calendar access
"CALENDAR_ACCESS_TITLE" = "Calendar Access";
"CALENDAR_ACCESS_MESSAGE" = "Calendar access is disabled. Please check your privacy settings.";

// Notification access
"NOTIFICATION_ACCESS_TITLE" = "Notification Access";
"NOTIFICATION_ACCESS_MESSAGE" = "Notification access is disabled. Please review your privacy settings.";

"NOTIFICATION_ERROR_TITLE" = "Notification error";
"NOTIFICATION_ERROR_MESSAGE" = "There was an error scheduling this notification. If this continues to happen, please reset your notifications via Settings > Manage Notifications > Cancel all notifications.";

// Notifications
"NOTIFICATION_CANCEL_NOTIFICATION" = "Cancel notification";
"NOTIFICATION_MINUTES_BEFORE %lld" = "%lld minutes before";

"NOTIFICATION_TITLE %@ %lld" = "Stream from %@ starting in %lld minutes.";
"NOTIFICATION_BODY %@ %@ %lld" = "%@'s stream \"%@\" is starting in %lld minutes.";

// Search prompt
"SEARCH_BY_NAME_OR_TAG" = "Search by name or tag";

// Widget view text
"NO_ONE_IS_STREAMING" = "No stream";
"NETWORK_ERROR" = "Network error";

// LiveWidget
"LIVE_WIDGET_TITLE" = "**LIVE**";
"LIVE_WIDGET_TITLE_NON_BOLD" = "LIVE";

// Upcoming Widget
"UPCOMING_WIDGET_TITLE" = "**UPCOMING**";
"UPCOMING_WIDGET_TITLE_NON_BOLD" = "UPCOMING";

// Past Widget
"PAST_WIDGET_TITLE" = "**PAST**";
"PAST_WIDGET_TITLE_NON_BOLD" = "PAST";

// Widget system text
"CURRENTLY_LIVE_WIDGET_DISPLAY_NAME" = "Live";
"CURRENTLY_LIVE_WIDGET_DESCRIPTION" = "Show a current stream.";

"UPCOMING_WIDGET_DISPLAY_NAME" = "Upcoming";
"UPCOMING_WIDGET_DESCRIPTION" = "Show an upcoming stream.";

"PAST_WIDGET_DISPLAY_NAME" = "Past";
"PAST_WIDGET_DESCRIPTION" = "Show an archived stream.";

"MULTIPLE_CURRENTLY_LIVE_WIDGET_DISPLAY_NAME" = "Multiple Live";
"MULTIPLE_CURRENTLY_LIVE_WIDGET_DESCRIPTION" = "Show two streams together.";

"MULTIPLE_UPCOMING_WIDGET_DISPLAY_NAME" = "Multiple Upcoming";
"MULTIPLE_UPCOMING_WIDGET_DESCRIPTION" = "Show two upcoming streams together.";

"MULTIPLE_PAST_WIDGET_DISPLAY_NAME" = "Multiple Past";
"MULTIPLE_PAST_WIDGET_DESCRIPTION" = "Show two past streams together.";

"LIVE_CHANNELS_WIDGET_DISPLAY_NAME" = "Live Channels";
"LIVE_CHANNELS_WIDGET_DESCRIPTION" = "Show a list of channels that are live.";

"UPCOMING_CHANNELS_WIDGET_DISPLAY_NAME" = "Upcoming Channels";
"UPCOMING_CHANNELS_WIDGET_DESCRIPTION" = "Show a list of channels that are about to go live.";

"PAST_CHANNELS_WIDGET_DISPLAY_NAME" = "Past Channels";
"PAST_CHANNELS_WIDGET_DESCRIPTION" = "Show a list of channels that just streamed.";

"LIVE_COUNT_WIDGET_DISPLAY_NAME" = "Live Count";
"LIVE_COUNT_WIDGET_DESCRIPTION" = "Show the number of current live streams.";

// Song List View
"SONG_LIST_VIEW_NAVIGATION_TITLE" = "Songs";
"SONG_SHEET_DISMISS_BUTTON" = "Dismiss";

// Single Song View
"SINGLE_SONG_VIEW_CONTEXT_MENU_OPEN_IN_APPLE_MUSIC" = "Open in Apple Music";
"SINGLE_SONG_VIEW_CONTEXT_MENU_JUMP_TO_SONG_IN_VIDEO" = "Jump to Song in Stream";

// Common between LivePaneView and UpcomingPaneView
"LIVE_PANE_VIEW_WITH" = "&";

"COLLAB_SHEET_NAVIGATION_TITLE" = "Collaboration";
"COLLAB_SHEET_DISMISS_BUTTON" = "Dismiss";

// DST Reminder View
"DST_REMINDER_VIEW_TITLE" = "**DAYLIGHT SAVING TIME REMINDER**";
"DST_REMINDER_VIEW_TEXT %@ %lld" = "Daylight Saving Time is %@ in **%lld day(s)**. As Japan does not observe Daylight Saving Time, please double-check the stream time.";
"DST_REMINDER_VIEW_FOOTER" = "Your device is set to a timezone that observes Daylight Saving Time. No location data was used.";

// Agency related
"SETTINGS_SELECT_AGENCY_NAVIGATION_TITLE" = "Agency";
